--- a/rest-fastapi-python/requirements.txt
+++ b/rest-fastapi-python/requirements.txt
@@ -1,8 +1,15 @@
-asgiref==3.4.1
-click==8.0.1
-fastapi==0.68.0
-h11==0.12.0
-pydantic==1.8.2
-starlette==0.14.2
-typing-extensions==3.10.0.0
-uvicorn==0.14.0
+annotated-types==0.7.0
+anyio==4.7.0
+asgiref==3.8.1
+click==8.1.7
+fastapi==0.115.6
+h11==0.14.0
+idna==3.10
+packaging==24.2
+pip-review==1.3.0
+pydantic==2.10.4
+pydantic_core==2.27.2
+sniffio==1.3.1
+starlette==0.41.3
+typing_extensions==4.12.2
+uvicorn==0.34.0
